[tool.poetry]
name = "croncaster"
version = "0.0.2"
description = "cached shell command caster based on rotating state machine"
authors = ["lightmanLP <liteman1000@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
pydantic = "^1.10.2"
yamt = "0.1.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
typing-extensions = "^4.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
